Dasy four of javascript completed

--- a/day3Js/day3.html
+++ b/day3Js/day3.html
@@ -61,6 +61,9 @@
         <h1>This is the home products</h1>
 
         <div class="product-list" id="productList"></div>
+        <div id="product-section">
+            <h1>This is the product section</h1>
+        </div>
     </section>
 
     <div id="modal" class="modal">
